# evodrive-lab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/algorithms/: __init__.py  base.py  ga.py  neat_runner.py  ppo_runner.py
app/api/: main.py
app/benchmark/: __init__.py  evaluate.py  suites.py
app/config/: defaults.py  models.py
app/export/: media.py  reporting.py
app/paper_tools/: __init__.py  common.py  latex.py  plots.py  report.py  runner.py
app/policies/: __init__.py  network.py
app/simulator/: __init__.py  environment.py  geometry.py  track.py
app/storage/: db.py  models.py  repository.py
app/web/: replay_viz.py  streamlit_app.py
app/worker/: main.py  runner.py
paper/: README.md  arxiv_checklist.md  arxiv_submission.md  experiment_plan.md  outline.md  results_template.md
paper/configs/: ablation_sensors.json  ablation_tracks.json  main.json
paper/latex/: README.md  main.tex  references.bib
paper/latex/sections/: benchmark_setup.tex  conclusion.tex  experiments.tex  introduction.tex  limitations.tex  methods.tex  results.tex
tests/integration/: test_api_contract.py
tests/unit/: test_environment.py  test_ga_shapes.py  test_paper_plots.py  test_paper_report.py  test_paper_runner.py  test_track.py
